--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+body {
+  background-color: #263238;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
