--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 }
 
 body {
-  background-color: #2a0301;
+  background-color: #d0d0d0;
 }
 
 @keyframes App-logo-spin {
@@ -39,4 +39,17 @@ body {
   to {
     transform: rotate(360deg);
   }
+}
+
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../public/background.jpg");
+  background-size: cover;
+  background-position: center;
+  opacity: 0.15;
+  z-index: -1;
 }
