--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,4 +52,18 @@ body {
   background-position: center;
   opacity: 0.075;
   z-index: -1;
+}
+
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+.app-container {
+  height: calc(var(--vh, 1vh) * 100);
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
 }
